shorty: optical style fix: don't have list row highlighting ornaments being covered partly by the navigation bars shadow.

--- a/css/shorty.css
+++ b/css/shorty.css
@@ -37,6 +37,7 @@
 	background: transparent;
 	text-align: left;
 	margin-top: 3.4em;
+	margin-left: 0.3em;
 }
 /* top bar, holding main control elements */
 .shorty-controls {
